# quizz

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
database/: data.json
quizz_command/: main.py
